--- a/frontend/src/locale/messages.cs.xlf
+++ b/frontend/src/locale/messages.cs.xlf
@@ -1582,8 +1582,8 @@
         <note priority="1" from="description">accelerator.total-boost</note>
       </trans-unit>
       <trans-unit id="53475bdf4a94f0103f33211d02102859e9a8fe3e" datatype="html">
-        <source>BTC</source>
-        <target>BTC</target>
+        <source>LKY</source>
+        <target>LKY</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/acceleration/acceleration-stats/acceleration-stats.component.html</context>
           <context context-type="linenumber">13</context>
@@ -1612,7 +1612,7 @@
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/recent-pegs-stats/recent-pegs-stats.component.html</context>
           <context context-type="linenumber">18</context>
         </context-group>
-        <note priority="1" from="description">BTC</note>
+        <note priority="1" from="description">LKY</note>
         <note priority="1" from="meaning">shared.btc</note>
       </trans-unit>
       <trans-unit id="cf2ec414465d65ab24b354663d94d051a67e26e9" datatype="html">
@@ -2660,8 +2660,8 @@
         <note priority="1" from="description">Search Clear Button</note>
       </trans-unit>
       <trans-unit id="meta.description.liquid.assets" datatype="html">
-        <source>Explore all the assets issued on the Liquid network like L-BTC, L-CAD, USDT, and more.</source>
-        <target>Prozkoumejte všechna aktiva vydaná v síti Liquid, jako jsou L-BTC, L-CAD, USDT a další.</target>
+        <source>Explore all the assets issued on the Liquid network like L-LKY, L-CAD, USDT, and more.</source>
+        <target>Prozkoumejte všechna aktiva vydaná v síti Liquid, jako jsou L-LKY, L-CAD, USDT a další.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/assets/assets-nav/assets-nav.component.ts</context>
           <context context-type="linenumber">43</context>
@@ -2716,8 +2716,8 @@
         <note priority="1" from="description">Asset data load error</note>
       </trans-unit>
       <trans-unit id="0ae529953ee15ef7af41fe3a3c30a10de5347f34" datatype="html">
-        <source>BTC Holdings</source>
-        <target>BTC Holdingy</target>
+        <source>LKY Holdings</source>
+        <target>LKY Holdingy</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/balance-widget/balance-widget.component.html</context>
           <context context-type="linenumber">5</context>
@@ -2827,8 +2827,8 @@
         <note priority="1" from="description">mining.block-fees</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-fees" datatype="html">
-        <source>See the average mining fees earned per Luckycoin block visualized in BTC and USD over time.</source>
-        <target>Podívejte se na průměrné poplatky za těžbu vydělané za bitcoinový blok vizualizované v BTC a USD v průběhu času.</target>
+        <source>See the average mining fees earned per Luckycoin block visualized in LKY and USD over time.</source>
+        <target>Podívejte se na průměrné poplatky za těžbu vydělané za bitcoinový blok vizualizované v LKY a USD v průběhu času.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-fees-graph/block-fees-graph.component.ts</context>
           <context context-type="linenumber">70</context>
@@ -2888,8 +2888,8 @@
         <note priority="1" from="description">mining.block-fees-subsidy-subsidy</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-fees-subsidy" datatype="html">
-        <source>See the mining fees earned per Luckycoin block compared to the Luckycoin block subsidy, visualized in BTC and USD over time.</source>
-        <target>Podívejte se na poplatky za vytěžení jednoho bloku bitcoinu v porovnání s odměnou sítě za blok bitcoinu, vizualizované v BTC a USD v průběhu času.</target>
+        <source>See the mining fees earned per Luckycoin block compared to the Luckycoin block subsidy, visualized in LKY and USD over time.</source>
+        <target>Podívejte se na poplatky za vytěžení jednoho bloku bitcoinu v porovnání s odměnou sítě za blok bitcoinu, vizualizované v LKY a USD v průběhu času.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-fees-subsidy-graph/block-fees-subsidy-graph.component.ts</context>
           <context context-type="linenumber">79</context>
@@ -3303,8 +3303,8 @@
         <note priority="1" from="description">mining.block-rewards</note>
       </trans-unit>
       <trans-unit id="meta.description.bitcoin.graphs.block-rewards" datatype="html">
-        <source>See Luckycoin block rewards in BTC and USD visualized over time. Block rewards are the total funds miners earn from the block subsidy and fees.</source>
-        <target>Podívejte se na vizualizaci odměn za bloky Luckycoinu v BTC a USD v čase. Odměny za bloky jsou celkové finanční prostředky, které těžaři získají z dotace bloku a poplatků.</target>
+        <source>See Luckycoin block rewards in LKY and USD visualized over time. Block rewards are the total funds miners earn from the block subsidy and fees.</source>
+        <target>Podívejte se na vizualizaci odměn za bloky Luckycoinu v LKY a USD v čase. Odměny za bloky jsou celkové finanční prostředky, které těžaři získají z dotace bloku a poplatků.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-rewards-graph/block-rewards-graph.component.ts</context>
           <context context-type="linenumber">68</context>
@@ -5325,8 +5325,8 @@
         <note priority="1" from="description">liquid.non-dust-expired</note>
       </trans-unit>
       <trans-unit id="506d3b3e461d170c39745288b9ea96b9ac9b7f78" datatype="html">
-        <source>Total amount of BTC held in non-dust Federation UTXOs that have expired timelocks</source>
-        <target>Celkové množství BTC držených v neprachových federačních UTXO, kterým vypršely časové zámky</target>
+        <source>Total amount of LKY held in non-dust Federation UTXOs that have expired timelocks</source>
+        <target>Celkové množství LKY držených v neprachových federačních UTXO, kterým vypršely časové zámky</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/expired-utxos-stats/expired-utxos-stats.component.html</context>
           <context context-type="linenumber">5</context>
@@ -5360,8 +5360,8 @@
         <note priority="1" from="description">liquid.total-expired</note>
       </trans-unit>
       <trans-unit id="a1351919fe237825d7d5844cff22192f88bd1eb4" datatype="html">
-        <source>Total amount of BTC held in Federation UTXOs that have expired timelocks</source>
-        <target>Celkové množství BTC držených ve federačních UTXO, kterým vypršely časové zámky</target>
+        <source>Total amount of LKY held in Federation UTXOs that have expired timelocks</source>
+        <target>Celkové množství LKY držených ve federačních UTXO, kterým vypršely časové zámky</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/expired-utxos-stats/expired-utxos-stats.component.html</context>
           <context context-type="linenumber">15</context>
@@ -5534,8 +5534,8 @@
         <note priority="1" from="description">liquid.fund-redemption-tx</note>
       </trans-unit>
       <trans-unit id="4dbfcaee1d2f0308bd20b3b6b6655ba1e04330dc" datatype="html">
-        <source>BTC Address</source>
-        <target>BTC adresa</target>
+        <source>LKY Address</source>
+        <target>LKY adresa</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/recent-pegs-list/recent-pegs-list.component.html</context>
           <context context-type="linenumber">16</context>
@@ -5597,8 +5597,8 @@
         <note priority="1" from="description">liquid.unpeg</note>
       </trans-unit>
       <trans-unit id="52b32e9a8be459e6539a9b9214c2a17b23206a6c" datatype="html">
-        <source>Number of times that the Federation's BTC holdings fall below 95% of the total L-BTC supply</source>
-        <target>Počet případů, kdy zásoby BTC Federace klesnou pod 95 % celkové nabídky L-BTC</target>
+        <source>Number of times that the Federation's LKY holdings fall below 95% of the total L-LKY supply</source>
+        <target>Počet případů, kdy zásoby LKY Federace klesnou pod 95 % celkové nabídky L-LKY</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/reserves-ratio-stats/reserves-ratio-stats.component.html</context>
           <context context-type="linenumber">6</context>
@@ -5650,8 +5650,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="eb7a000cd340b44291d790f7b56f7b926edc275b" datatype="html">
-        <source>L-BTC in circulation</source>
-        <target>L-BTC v oběhu</target>
+        <source>L-LKY in circulation</source>
+        <target>L-LKY v oběhu</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/liquid-reserves-audit/reserves-supply-stats/reserves-supply-stats.component.html</context>
           <context context-type="linenumber">3</context>
@@ -6402,13 +6402,13 @@
         <note priority="1" from="description">mining.fees-per-block-desc</note>
       </trans-unit>
       <trans-unit id="0705223420d290a218e4ed83bd4d904454a9cee8" datatype="html">
-        <source>BTC/block</source>
-        <target>BTC/blok</target>
+        <source>LKY/block</source>
+        <target>LKY/blok</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/reward-stats/reward-stats.component.html</context>
           <context context-type="linenumber">21</context>
         </context-group>
-        <note priority="1" from="description">BTC/block</note>
+        <note priority="1" from="description">LKY/block</note>
         <note priority="1" from="meaning">shared.btc-block</note>
       </trans-unit>
       <trans-unit id="cf3a97b1c1546b843411cfe101bc55ba2ac46bac" datatype="html">
@@ -7923,8 +7923,8 @@
         <note priority="1" from="description">liquid.federation-expired-utxos</note>
       </trans-unit>
       <trans-unit id="061051c88f1c686bcf3b40a81c8e824ef2ca7ae0" datatype="html">
-        <source>L-BTC Supply Against BTC Holdings</source>
-        <target>Nabídka L-BTC proti držení BTC</target>
+        <source>L-LKY Supply Against LKY Holdings</source>
+        <target>Nabídka L-LKY proti držení LKY</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/dashboard/dashboard.component.html</context>
           <context context-type="linenumber">184</context>
@@ -9477,8 +9477,8 @@
         <note priority="1" from="description">lightning.share</note>
       </trans-unit>
       <trans-unit id="meta.description.lightning.nodes-country-overview" datatype="html">
-        <source>See a geographical breakdown of the Lightning network: how many Lightning nodes are hosted in countries around the world, aggregate BTC capacity for each country, and more.</source>
-        <target>Podívejte se na geografické rozdělení Lightning sítě: kolik uzlů Lightning je hostováno v zemích po celém světě, souhrnná kapacita BTC pro každou zemi a další.</target>
+        <source>See a geographical breakdown of the Lightning network: how many Lightning nodes are hosted in countries around the world, aggregate LKY capacity for each country, and more.</source>
+        <target>Podívejte se na geografické rozdělení Lightning sítě: kolik uzlů Lightning je hostováno v zemích po celém světě, souhrnná kapacita LKY pro každou zemi a další.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-country-chart/nodes-per-country-chart.component.ts</context>
           <context context-type="linenumber">47</context>
@@ -9505,8 +9505,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="7032954508645880700" datatype="html">
-        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> BTC capacity</source>
-        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> BTC kapacita</target>
+        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> LKY capacity</source>
+        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(country.capacity / 100000000, 2)"/> LKY kapacita</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-country-chart/nodes-per-country-chart.component.ts</context>
           <context context-type="linenumber">105</context>
@@ -9631,16 +9631,16 @@
         <note priority="1" from="description">lightning.top-100-isp-ln</note>
       </trans-unit>
       <trans-unit id="meta.description.lightning.nodes-per-isp" datatype="html">
-        <source>Browse the top 100 ISPs hosting Lightning nodes along with stats like total number of nodes per ISP, aggregate BTC capacity per ISP, and more</source>
-        <target>Prohlédněte si 100 nejlepších ISP hostujících Lightning uzly spolu se statistikami, jako je celkový počet uzlů na ISP, agregovaná BTC kapacita na ISP a další</target>
+        <source>Browse the top 100 ISPs hosting Lightning nodes along with stats like total number of nodes per ISP, aggregate LKY capacity per ISP, and more</source>
+        <target>Prohlédněte si 100 nejlepších ISP hostujících Lightning uzly spolu se statistikami, jako je celkový počet uzlů na ISP, agregovaná LKY kapacita na ISP a další</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-isp-chart/nodes-per-isp-chart.component.ts</context>
           <context context-type="linenumber">54</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3627306100664959238" datatype="html">
-        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> BTC</source>
-        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> BTC</target>
+        <source><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> LKY</source>
+        <target><x id="PH" equiv-text="this.amountShortenerPipe.transform(isp[2] / 100000000, 2)"/> LKY</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-per-isp-chart/nodes-per-isp-chart.component.ts</context>
           <context context-type="linenumber">164</context>
@@ -9758,8 +9758,8 @@
         </context-group>
       </trans-unit>
       <trans-unit id="meta.description.lightning.ranking.liquidity" datatype="html">
-        <source>See Lightning nodes with the most BTC liquidity deployed along with high-level stats like number of open channels, location, node age, and more.</source>
-        <target>Prohlédněte si Lightning uzly s největší likviditou BTC spolu se statistikami na vysoké úrovni, jako je počet otevřených kanálů, umístění, stáří uzlu a další.</target>
+        <source>See Lightning nodes with the most LKY liquidity deployed along with high-level stats like number of open channels, location, node age, and more.</source>
+        <target>Prohlédněte si Lightning uzly s největší likviditou LKY spolu se statistikami na vysoké úrovni, jako je počet otevřených kanálů, umístění, stáří uzlu a další.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lightning/nodes-ranking/top-nodes-per-capacity/top-nodes-per-capacity.component.ts</context>
           <context context-type="linenumber">35</context>
